--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <body>
     <div class="app">
         <div class="panel">
-          <img class="logo" src="/images/logo.svg" alt="Логотип Habbit App">
+          <img class="logo" src="images/logo.svg" alt="Логотип Habbit App">
           <nav class="menu">
               <div class="menu__list"></div>
               <button class="menu__add" onclick="togglePopup()">
-                <img src="./images/Add.svg" alt="Добавити звичку">
+                <img src="images/Add.svg" alt="Добавити звичку">
               </button>
           </nav>
         </div>
@@ -41,7 +41,7 @@
                     <input name="comment" class="input_icon" type="text" placeholder="Коментар">
                     <img 
                      class="input__icon" 
-                     src="./images/comment.svg" 
+                     src="images/comment.svg" 
                      alt="Іконка коментаря"
                      />
                      <button class="button" type="submit">Готово</button>
@@ -55,13 +55,13 @@
             <div class="icon_label">Іконка</div>
             <div class="icon_select">
               <button class="icon icon_active" onclick="setIcon(this, 'sport')">
-                <img src="./images/Sport.svg" alt="Спорт">
+                <img src="images/Sport.svg" alt="Спорт">
               </button>
               <button class="icon" onclick="setIcon(this, 'water')">
-                <img src="./images/Water.svg" alt="Вода">
+                <img src="images/Water.svg" alt="Вода">
               </button>
               <button class="icon" onclick="setIcon(this, 'food')">
-                <img src="./images/Food.svg" alt="Їда">
+                <img src="images/Food.svg" alt="Їда">
               </button>
             </div>
             <form class="popup__form" onsubmit="addHabbits(event)">
@@ -72,7 +72,7 @@
               <button class="button" type="submit">Добавити</button>
             </form>
             <button class="popup__close" onclick="togglePopup()">
-              <img src="./images/Close.svg" alt="Закрити попап">
+              <img src="images/Close.svg" alt="Закрити попап">
             </button>         
           </div>
         </div>
