Fixed image paths and updated index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <nav class="menu">
               <div class="menu__list"></div>
               <button class="menu__add" onclick="togglePopup()">
-                <img src="images/Add.svg" alt="Добавити звичку">
+                <img src="images/add.svg" alt="Добавити звичку">
               </button>
           </nav>
         </div>
@@ -55,13 +55,13 @@
             <div class="icon_label">Іконка</div>
             <div class="icon_select">
               <button class="icon icon_active" onclick="setIcon(this, 'sport')">
-                <img src="images/Sport.svg" alt="Спорт">
+                <img src="images/sport.svg" alt="Спорт">
               </button>
               <button class="icon" onclick="setIcon(this, 'water')">
-                <img src="images/Water.svg" alt="Вода">
+                <img src="images/water.svg" alt="Вода">
               </button>
               <button class="icon" onclick="setIcon(this, 'food')">
-                <img src="images/Food.svg" alt="Їда">
+                <img src="images/food.svg" alt="Їда">
               </button>
             </div>
             <form class="popup__form" onsubmit="addHabbits(event)">
@@ -72,7 +72,7 @@
               <button class="button" type="submit">Добавити</button>
             </form>
             <button class="popup__close" onclick="togglePopup()">
-              <img src="images/Close.svg" alt="Закрити попап">
+              <img src="images/close.svg" alt="Закрити попап">
             </button>         
           </div>
         </div>
